--- a/views/appdev.ejs
+++ b/views/appdev.ejs
@@ -19,8 +19,8 @@
                 <a href="#">Portofolio</a>
                 <div class="dropdown-content">
                     <a href="/webdev">Web Development</a>
-                    <a href="#">UIUX Design</a>
-                    <a href="/appdev">App Development</a>
+                    <a href="/data">Data</a>
+                    <a href="#">App Development</a>
                 </div>
             </div>
         </div>
@@ -31,21 +31,20 @@
     <div class="project" id="projects">
         <!--Project Item-->
         <div class="project-item">
-            <h1>Data Mining</h1>
+            <h1>Poutendance</h1>
             <div class="carousel-used">
-                <p>Segmentasi Pelanggan Berbasis Naive Bayes: 
-                    Menghubungkan Data Kepribadian dan Riwayat 
-                    Pembelian untuk Optimalisasi Bisnis</p>
+                <p>Aplikasi UKM Berbasis Lokasi: Sistem Check-In dan Check-Out Ruangan serta Pemindahan Kunci Menggunakan QR Acak</p>
                 <div class="used">
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/matlab/matlab-original.svg" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/kaggle/kaggle-original.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/dart/dart-original.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/flutter/flutter-original.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/firebase/firebase-original.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/androidstudio/androidstudio-original.svg" />
                 </div>
                 <div class="carousel">
                     <div class="track">
-                        <img src="src\Data_OptimalisasiBisnis\Outlier_Detection.png" alt="Outlier Detection" class="slide">
-                        <img src="src\Data_OptimalisasiBisnis\Training_Data.png" alt="Training Data" class="slide">
-                        <img src="src\Data_OptimalisasiBisnis\Test_Data.png" alt="Test Data" class="slide">
-                        <img src="src\Data_OptimalisasiBisnis\Accuracy.png" alt="Accuracy Data" class="slide">
+                        <img src="src\Appdev_Poutendance\loginregister.png" alt="Login & Register Page" class="slide">
+                        <img src="src\Appdev_Poutendance\profil.png" alt="Profile & Home page" class="slide">
+                        <img src="src\Appdev_Poutendance\scan.png" alt="Scanner & QR page" class="slide">
                     </div>
                     <button class="prev">&#8592;</button>
                     <button class="next">&#8594;</button>
