--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,13 +77,13 @@
 
     <!--Academic-->
     <div class="academic" id="academics">
-
-        <div class="Deco-blue bubble1"></div>
-        <div class="Deco-blue-shade bubble2"></div>
-        <div class="Deco-blue-shade bubble3"></div>
-        <div class="Deco-blue bubble4"></div>
-        <div class="Deco-blue bubble5"></div>
-
+        <div class="bubbles">
+            <div class="Deco-blue bubble1"></div>
+            <div class="Deco-blue-shade bubble2"></div>
+            <div class="Deco-blue-shade bubble3"></div>
+            <div class="Deco-blue bubble4"></div>
+            <div class="Deco-blue bubble5"></div>
+        </div>
         <h1>ACADEMIC</h1>
         <div class="animate-on-scroll slide-up">
             <div class="academic-item">
@@ -147,33 +147,13 @@
     <div class="experience" id="experiences">
         <h1>EXPERIENCE</h1>
         <div class="animate-on-scroll slide-right">
-            <div class="experience-item">
+            <div class="experience-item left">
                 <div class="experience-item-child">
-                    <div class="blur" style="transition-delay: 0.7s"><img src="src/POUT.png" alt="POUT"></div>
-                    <div class="animate-on-scroll slide-right">
-                        <div class="experience-item-child-text">
-                            <h2>Persekutuan Oikumene Universitas Tarumanagara</h2>
-                            <div class="lighten">
-                                <ul id="POUT-list"></ul>
-                            </div>
-                        </div>
+                    <div class="blur" style="transition-delay: 0.7s">
+                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/UNTAR.png" alt="UNTAR"></a>
                     </div>
-                </div>
-                <div class="experience-item-child">
-                    <div class="blur" style="transition-delay: 0.7s"><img src="src/Huawei.png" alt="Huawei"></div>
                     <div class="animate-on-scroll slide-right">
-                        <div class="experience-item-child-text">
-                            <h2>Huawei</h2>
-                            <div class="lighten">
-                                <ul id="Everyone-Asia-list"></ul>
-                            </div>
-                        </div>                    
-                    </div>
-                </div>
-                <div class="experience-item-child">
-                    <div class="blur" style="transition-delay: 0.7s"><img src="src/UNTAR.png" alt="UNTAR"></div>
-                    <div class="animate-on-scroll slide-right">
-                        <div class="experience-item-child-text">
+                        <div class="experience-item-child-text-left">
                             <h2>Fakultas Teknologi Informasi Universitas Tarumanagara</h2>
                             <div class="lighten">
                                 <ul id="FTIUNTAR-list"></ul>
@@ -181,18 +161,57 @@
                         </div>                    
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="animate-on-scroll slide-left">
+            <div class="experience-item right">
                 <div class="experience-item-child">
-                    <div class="blur" style="transition-delay: 0.7s"><img src="src/Varanity.png" alt="Varanity"></div>
+                    <div class="animate-on-scroll slide-left">
+                        <div class="experience-item-child-text-right">
+                            <h2>Persekutuan Oikumene Universitas Tarumanagara</h2>
+                            <div class="lighten">
+                                <ul id="POUT-list"></ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blur" style="transition-delay: 0.7s">
+                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/POUT.png" alt="POUT"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="animate-on-scroll slide-right">
+            <div class="experience-item left">
+                <div class="experience-item-child">
+                    <div class="blur" style="transition-delay: 0.7s">
+                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/Huawei.png" alt="Huawei"></a>
+                    </div>
                     <div class="animate-on-scroll slide-right">
-                        <div class="experience-item-child-text">
-                            <h2>Varanity</h2>
+                        <div class="experience-item-child-text-left">
+                            <h2>Huawei Certified ICT Associate</h2>
+                            <div class="lighten">
+                                <ul id="Huawei-list"></ul>
+                            </div>
+                        </div>                    
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="animate-on-scroll slide-left">
+            <div class="experience-item right">
+                <div class="experience-item-child">
+                    <div class="animate-on-scroll slide-left">
+                        <div class="experience-item-child-text-right">
+                            <h2>Varanity Clothing</h2>
                             <div class="lighten">
                                 <ul id="Varanity-list"></ul>
                             </div>
                         </div>
                     </div>
+                    <div class="blur" style="transition-delay: 0.7s">
+                        <a href="https://www.linkedin.com/in/hans-christian-handoto"><img src="src/Varanity.png" alt="Varanity"></a>
+                    </div>
                 </div>
-                
             </div>
         </div>
     </div>
@@ -209,15 +228,21 @@
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="src/DataMining.png" alt="Mob Dev">
+                        <img src="src/DataMining.png" alt="Data">
                         <div class="slide-text">
-                            <a href="/data"><h2>Data Mining</h2></a>
+                            <a href="/data"><h2>Data</h2></a>
                         </div>
                     </div>
                     <div class="slide">
-                        <img src="src/WebDev.png" alt="UI/UX"> 
+                        <img src="src/Appdev.png" alt="UI/UX"> 
                         <div class="slide-text">
-                            <a href="/webdev"><h2>Web Development</h2></a>
+                            <a href="/appdev"><h2>UI/UX</h2></a>
+                        </div>
+                    </div>
+                    <div class="slide">
+                        <img src="src/Appdev.png" alt="App dev"> 
+                        <div class="slide-text">
+                            <a href="/appdev"><h2>App Development</h2></a>
                         </div>
                     </div>
                 </div>
@@ -229,13 +254,32 @@
 
     <!--Footer-->
     <footer class="footer" id="contacts">
-        <h1>Social Media</h1>
-        <div>
-            <a href="https://www.linkedin.com/in/hans-christian-handoto" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/Alpucap" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=alpucaps@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>            
-            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        <div class="footer-child">
+            <div class="footer-loc">
+                <h1>Home</h1>
+                <div class="links">
+                    <a href="">Jakarta, Indonesia</a>
+                </div>
+            </div>
+            <div class="footer-socialmedia">
+                <h1>Contact Me</h1>
+                <div class="links">
+                    <a href="https://www.linkedin.com/in/hans-christian-handoto" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/Alpucap" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=alpucaps@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>            
+                    <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/hnscns/" target="_blank"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="footer-project">
+                <h1>Portofolio</h1>
+                <div class="links">
+                    <a href="">Web Development</a>
+                    <a href="">App Development</a>
+                    <a href="">Data Visualization</a>
+                    <a href="">UI/UX Design</a>
+                </div>
+            </div>
         </div>
     </footer>
 
