--- a/views/webdev.ejs
+++ b/views/webdev.ejs
@@ -14,14 +14,13 @@
     <nav>
         <div class="nav-item">
             <a href="/">Home</a>
-            <a href="#">Contact</a>
+            <a href="#contacts">Contact</a>
             <div class="dropdown">
                 <a href="#">Portofolio</a>
                 <div class="dropdown-content">
                     <a href="/data">Data</a>
                     <a href="#">UIUX Design</a>
-                    <a href="#">Data Visualization</a>
-                    <a href="#">App Development</a>
+                    <a href="/appdev">App Development</a>
                 </div>
             </div>
         </div>
@@ -40,6 +39,7 @@
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" />
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original.svg" />
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original.svg" />
                 </div>
                 <div class="carousel">
                     <div class="label">Finalist: FTI COMP</div>
@@ -114,6 +114,7 @@
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" />
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original.svg" />
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original.svg" />
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/express/express-original.svg" />
                 </div>
                 <div class="carousel">
                     <div class="track">
@@ -130,13 +131,32 @@
 
     <!--Footer-->
     <footer class="footer" id="contacts">
-        <h1>Social Media</h1>
-        <div>
-            <a href="www.linkedin.com/in/hans-christian-handoto" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/Alpucap" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&to=alpucaps@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>            
-            <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        <div class="footer-child">
+            <div class="footer-loc">
+                <h1>Home</h1>
+                <div class="links">
+                    <a href="">Jakarta, Indonesia</a>
+                </div>
+            </div>
+            <div class="footer-socialmedia">
+                <h1>Contact Me</h1>
+                <div class="links">
+                    <a href="https://www.linkedin.com/in/hans-christian-handoto" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/Alpucap" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=alpucaps@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>            
+                    <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/hnscns/" target="_blank"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="footer-project">
+                <h1>Portofolio</h1>
+                <div class="links">
+                    <a href="">Web Development</a>
+                    <a href="">App Development</a>
+                    <a href="">Data Visualization</a>
+                    <a href="">UI/UX Design</a>
+                </div>
+            </div>
         </div>
     </footer>
 
